--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "days-quotes",
-	"version": "0.0.0",
+	"version": "0.0.1-alpha.0",
 	"description": "",
-	"main": "index.js",
+	"main": "src/index.mjs",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
