--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "days-quotes",
 	"version": "0.0.1-alpha.0",
 	"description": "",
-	"main": "src/index.mjs",
+	"main": "src/index.cjs",
+	"module": "src/index.mjs",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -12,7 +13,7 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "ISC",
+	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/xiaotong-tong/days-quotes/issues"
 	},
