--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-	"name": "days-quotes",
-	"version": "0.0.1-alpha.3",
+	"name": "@xtt-nami/days-quotes",
+	"version": "1.0.0",
 	"description": "",
 	"main": "src/index.cjs",
 	"module": "src/index.mjs",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"publish:patch": "npm version patch && npm publish --access public",
+		"publish:minor": "npm version minor && npm publish --access public",
+		"publish:major": "npm version major && npm publish --access public"
 	},
 	"repository": {
 		"type": "git",
